services/media/clusters/feather-core/kavita/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - kavita.apps.onelite.feather
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kavita
          port: 5000
